@@ -1,6 +1,7 @@
 2010-07-08  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Follow-up to #14719: Wrong code comment (QUICKSTART/FIRST_INSTALL) (thanks to Steffen Gebert)
+	* Fixed bug #14813: Install Tool uses deprecated function t3lib_stdGraphic->imagecreate() (thanks to Stefan Galinski)
 
 2010-07-08  Dmitry Dulepov  <dmitry@typo3.org>
 
